test/lit/vpto/auto_vecscope_infer_escape_error.pto
// RUN: ! ptoas --pto-arch=a5 --pto-backend=vpto --emit-vpto %s -o - 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a5"} {
  func.func @auto_vecscope_infer_escape_error() {
    %c0 = arith.constant 0 : index
    %c0_i64 = arith.constant 0 : i64
    %ub = pto.castptr %c0_i64 : i64 -> !pto.ptr<f32, ub>

    %vec = pto.vlds %ub[%c0] : !pto.ptr<f32, ub> -> !pto.vreg<64xf32>
    pto.barrier #pto.pipe<PIPE_ALL>
    %mask = pto.pset_b32 "PAT_ALL" : !pto.mask<b32>
    pto.vsts %vec, %ub[%c0], %mask : !pto.vreg<64xf32>, !pto.ptr<f32, ub>, !pto.mask<b32>
    return
  }
}

// CHECK: error: 'pto.vlds' op cannot infer resultless pto.vecscope because VPTO vector-scope data cannot have external users; escaping value type is '!pto.vreg<64xf32>'
